# Dice-15-Puzzle

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  UI 기획.pptx  UI.ai  build.rs  docker-compose.yml  image_goal.ai  index.html  readme.md  web_build.sh  포스트모템.pptx  프로젝트 발의.pptx
.cargo/: config.toml
assets/images/: image_goal.ai
preprocess/: process_image.rs
src/: app.rs  block.rs  board.rs  board_string.rs  buffered_input.rs  daily_puzzle_info.rs  duration_to_string.rs  game.rs  game_mode_ui.rs  game_ui.rs  info_text.rs  local_storage.rs  main.rs  mode_selection_popup.rs  object.rs  player.rs  statistics_manager.rs  tile.rs
src/network/: lib.rs  mod.rs  network.rs
src/ui/: game_mode_ui.rs  game_ui.rs  game_ui_system.rs  mod.rs  mode_selection_popup.rs  popup.rs  popup_date_selection.rs  popup_difficulty.rs  popup_enroll_score.rs  popup_how_to_play.rs  popup_mode_selection.rs  popup_rankings.rs  popup_settings.rs  popup_statistics.rs  scroll_bar.rs  text_input_box.rs
src/utils/: board_string.rs  mod.rs  network.rs  shuffle.rs
web_build/: about.html  dice_15_puzzle.js  index.html
web_build/assets/images/: image_goal.ai
