[package]
name = "dice_15_puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Inspertor does not work properly in level 3. Check here https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.*"
bevy_mod_picking = "0.10.*"
rand = "*"
bevy-inspector-egui = "*"
chrono = { version = "*", features = ["serde"] }
copypasta = "*"
wasm-sockets = "1.0.0"
wasm-bindgen = "0.2.83"
serde = "1.0.*"
serde_json = "1.0.*"

[build-dependencies]
image = "0.24.0"

[features]
default = []
debug = []